@@ -1,3 +1,12 @@
+2007-06-29  Sebastian Marsching  <sebastian.marsching@1und1.de>
+
+	* src/de/schlund/pfixcore/workflow/Context.java: 
+	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
+	* src/de/schlund/pfixcore/workflow/SessionStatusEvent.java: 
+	* src/de/schlund/pfixcore/workflow/SessionStatusListener.java: 
+	Implemented session listeners: Applications can register a listener with a
+	context instance that is notfied, when the session is invalidated.	
+
 2007-06-27  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixxml/config/impl/DirectOutputServletConfigImpl.java: fixed property
